yaml_parser/tests/fail/anchor-before-sequence-entry-on-same-line.snap
---
source: yaml_parser/tests/fail.rs
---
parse error at line 1, column 9
  |
1 | &anchor - sequence entry
  |         ^
expected `...`
